# memory

./: .gitignore  CLAUDE.md  README.md  gemini-memory  install.sh  memory  package.json
.github/workflows/: desktop-release.yml
design/: claude.md  validatio-system.md
desktop/: index.html  package.json  vite.config.ts
desktop/dist-assets/: PKGBUILD  memory-desktop.desktop
desktop/src/: App.tsx  index.css  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
desktop/src/components/: ContextView.tsx  LearnPanel.tsx  MemoryCard.tsx  MemoryEditModal.tsx  MemoryList.tsx  ProvidersView.tsx  Sidebar.tsx
docs/: _sidebar.md  architecture.md  concept.md  desktop.md  devlopper-guide.md  getting-started.md  schema-definition.md  security.md  todo.md
docs/commands/: daemon.md  harvest.md  learn.md  shell.md  ui.md
docs/concepts/: context.md  how-it-works.md
docs/connectors/: setup.md
docs/extension/: index.md
extension/: background.js  content.js  manifest-firefox.json  manifest.json  popup.js
extension-firefox/: manifest.json  popup.html  popup.js
site/: contributing.md  home.md  index.html
site/commands/: scopes.md  store.md  ui.md  watch.md
site/concepts/: confidence.md  scopes.md
site/connectors/: index.md
src/: cli.ts  hooks.ts  store.ts
src/observers/: code.ts  git.ts  shell-daemon.ts  shell-hooks.ts  shell.ts
src/ui/: routes.ts  server.ts
store-assets/: privacy-policy.md  screenshots-guide.md  store-listing.md
(+1 files in other folders)
