[package]
name = "memory-desktop"
version = "0.1.0"
description = "Memory — persistent cognitive layer for AI systems"
authors = ["Sakaax"]
license = "MIT"
repository = "https://github.com/Sakaax/memory"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "memory_desktop_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
